; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_tim.c_TIM_ETRClockMode2Config.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_tim.c_TIM_ETRClockMode2Config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@TIM_SMCR_ECE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TIM_ETRClockMode2Config(%struct.TYPE_5__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %10 = call i32 @IS_TIM_LIST3_PERIPH(%struct.TYPE_5__* %9)
  %11 = call i32 @assert_param(i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @IS_TIM_EXT_PRESCALER(i32 %12)
  %14 = call i32 @assert_param(i32 %13)
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @IS_TIM_EXT_POLARITY(i32 %15)
  %17 = call i32 @assert_param(i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @IS_TIM_EXT_FILTER(i32 %18)
  %20 = call i32 @assert_param(i32 %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @TIM_ETRConfig(%struct.TYPE_5__* %21, i32 %22, i32 %23, i32 %24)
  %26 = load i32, i32* @TIM_SMCR_ECE, align 4
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = or i32 %29, %26
  store i32 %30, i32* %28, align 4
  ret void
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_TIM_LIST3_PERIPH(%struct.TYPE_5__*) #1

declare dso_local i32 @IS_TIM_EXT_PRESCALER(i32) #1

declare dso_local i32 @IS_TIM_EXT_POLARITY(i32) #1

declare dso_local i32 @IS_TIM_EXT_FILTER(i32) #1

declare dso_local i32 @TIM_ETRConfig(%struct.TYPE_5__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
